[package]
name = "solana-wagon"
version = "0.1.0"
edition = "2021"

[dependencies]
# HTTP server
actix-web = "4.4"
tokio = { version = "1.0", features = ["full", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Solana dependencies - stable v2.x versions (compatible with spl-associated-token-account 2.3)
solana-client = "1.18"
solana-sdk = "1.18"
solana-program = "1.18"
spl-token = "4.0"
spl-associated-token-account = "2.3"

# Utility dependencies
anyhow = "1.0"
thiserror = "1.0"
hex = "0.4"

# Database dependencies
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# Additional Solana dependencies
solana-account-decoder = "1.18"
solana-transaction-status = "1.18"